# alloc8

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md
cmake/: alloc8Config.cmake.in
docs/: THREAD_SUPPORT_DESIGN.md  windows-interposition.md
examples/: CMakeLists.txt
examples/diehard/: CMakeLists.txt  diehard_alloc8.cpp  diehard_redirect_win.cpp
examples/hoard/: CMakeLists.txt  hoard_alloc8.cpp  hoard_redirect_win.cpp  hoard_thread_hooks.cpp  hoard_thread_hooks_win.cpp
examples/simple_heap/: CMakeLists.txt  simple_heap.cpp
include/alloc8/: alloc8.h  allocator_traits.h  ansi_wrapper.h  function_table.h  gnu_wrapper.h  platform.h  thread_hooks.h
prefixed/: prefixed_api.cpp.in  prefixed_api.h.in
src/common/: new_delete.cpp  new_delete.inc  wrapper_common.cpp
src/platform/linux/: gnu_wrapper.cpp  linux_threads.cpp  version_script.map.in
src/platform/macos/: mac_interpose.h  mac_threads.cpp  mac_wrapper.cpp  mac_zones.cpp
src/platform/windows/: alloc8_redirect.cpp  win_threads.cpp  win_wrapper_detours.cpp  x86_jump.h
tests/: CMakeLists.txt  test_basic_alloc.cpp
